GNOME Bugzilla – Bug 662025
couldn't prepare to write out keyring
Last modified: 2011-10-24 09:25:58 UTC
this report has been filed here: https://bugs.launchpad.net/ubuntu/+source/gnome-keyring/+bug/874501 "gnome-keyring-daemon can't store password in keyring files into ~/.gnome2/keyrings/ .keyring files are created, but passwords aren't stored in /var/log/auth.log when any application try to store a password (nautilus, empathy, evolution, ubuntuone) I can see these log messages: Oct 14 17:18:56 ktulu gnome-keyring-daemon[15555]: egg_symkey_generate_simple: assertion `iterations >= 1' failed Oct 14 17:18:56 ktulu gnome-keyring-daemon[15555]: couldn't prepare to write out keyring: /home/alessio/.gnome2/keyrings/login.keyring Oct 14 17:18:56 ktulu gnome-keyring-daemon[15555]: couldn't unwrap item secret: Internal error" "
I committed this patch to the gnome-3-2 branch. Does it solve the problem? I'll be testing it too. commit 6bb53edf90e798aab2a68d0eb87bdd7cc61e3829 Author: Stef Walter <stefw@collabora.co.uk> Date: Mon Oct 24 11:18:41 2011 +0200 pkcs11: Use g_random_int_range() for pseudo-random hash iteration count * Used when hashing passwords into symmetric keys * Previous solution was overflowing https://bugzilla.gnome.org/show_bug.cgi?id=662025 Please reopen if this does not resolve the issue.